fix footer__uc-wrap on mobile

--- a/styles/_layout.scss
+++ b/styles/_layout.scss
@@ -804,6 +804,10 @@
     width: 100%;
     overflow: hidden;
     position: relative;
+
+    @media screen and (max-width: 768px) {
+        display: none;
+    }
 }
 
 .footer__uc:hover .footer__uc-item {
